  1.2.12
  -remove caption on roll
  -reset polyhedral on roll
  -removed borders for dice buttons in popup
  -CSS INJECTION
  -fixed a couple images
  -added a reset button to destiny

1.2.11
  -blue dice first for init
  -added stop to keep modify stats in character from going negative
  -added up/down grade dice for character and init

1.2.10
  -removed the keyData function, cuz it didn't do anything
  -added bonusdie to init tracker

1.2.9
  -fixed character a lot
  -added init check box on character list
    -click init cell on character list to show that character has gone this round
    -checks will reset on new round with init tracker
  -added die tracker in character list
    -click dice cell on character list to add dice for next check
    -dice will reset on when character's Init is checked

1.2.8
  -added Character list

1.2.7.1
  -added an automatic fix for the broken(ish) characters.  NO NEED TO DELETE ANYTHING ANYMORE

1.2.7
  -recoded Character tracker a smidge to make it a lot better

1.2.6
  -Incap now happens when wounds.strain exceeds threshold

1.2.5
  -you can now edit your character by clicking on the character image

1.2.4
  -Delete button in messages
  -Delete button in chat

1.2.3
  -CSS overhaul

1.2.2
  -Initiative Roll Button (under Special Rolls)

1.2.1.2
  -added popups for Initiative slot modification
  -added Initiative reset button,
  -start initiativeRoll

1.2.1.1
  -added sweet CSS toggle

1.2.1
  -fixed dumb whitespace in the middle

1.2.0
  -Initiative manual tracker up and working!

1.1.2
  -Delete Room button

1.1.1
  -user specific current character and popup confirmation on deleting a character

1.1.0
  -user based dicepool,
  -removed reset of symbols and special rolls on roll

1.0.10
  -caption and tooltip

1.0.9
  -added Character Tracker

1.0.8
  -Added Destiny Roll

1.0.7
  -Added Critical and Ship Critical

1.0.6
  -Added Chat

1.0.5
  -Added usernames

1.0.4
  -tweaked the arrow sizes, added click on die to add die
