@@ -1,3 +1,6 @@
+  -added 'All dice have cancelled out' message
+  -added emoji to chat
+
   1.2.12
   -remove caption on roll
   -reset polyhedral on roll
